<resources>
    <string name="app_name">ImplicitIntents</string>
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>
    <string name="edittext_loc">Golde Gate Bridge</string>
    <string name="button_loc">Open Location</string>
    <string name="edittext_share">Twas brilling and the sligthy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="share_text">Share this text with:</string>
    <string name="button_take_picture">Take a picture</string>
</resources>
