<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittext_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_uri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_uri"
        android:layout_marginBottom="@dimen/bottom"/>

    <EditText
        android:id="@+id/edittext_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_loc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_loc"
        android:layout_marginBottom="@dimen/bottom" />

    <EditText
        android:id="@+id/edittext_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_share"
        android:layout_marginBottom="@dimen/bottom"/>

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_take_picture"
        android:layout_marginBottom="@dimen/bottom"/>

</LinearLayout>